syntax = "proto3";
package echo;

service Echoer {
  rpc Echo(EchoRequest) returns (EchoResponse);
}

message EchoRequest {
  string msg = 1;
}

message EchoResponse {
  string msg = 1;
}